[project]
name = "vbn-diw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "pyvista>=0.43.0",
    "rtree>=1.4.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
    "trimesh>=4.0.0",
]
